[gd_scene load_steps=2 format=2]

[ext_resource path="res://client/main_menu/flat/SettingsDialog.gd" type="Script" id=1]

[node name="SettingsDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.5
margin_top = -99.5
margin_right = 192.5
margin_bottom = 99.5
window_title = "Settings"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
fullscreenCheckboxPath = NodePath("VBoxContainer/FullScreenCheckBox")
mouseSensetivityLabelPath = NodePath("VBoxContainer/MouseSensetivityLabel")
mouseSensetivitySliderPath = NodePath("VBoxContainer/MouseSensetivitySlider")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_right = 353.0
margin_bottom = 48.0
text = "Full screen"

[node name="MouseSensetivityLabel" type="Label" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 353.0
margin_bottom = 81.0
text = "Mouse Sensetivity:"

[node name="MouseSensetivitySlider" type="HSlider" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 353.0
margin_bottom = 121.0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0
[connection signal="about_to_show" from="." to="." method="_on_SettingsDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_SettingsDialog_popup_hide"]
[connection signal="toggled" from="VBoxContainer/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_toggled"]
[connection signal="value_changed" from="VBoxContainer/MouseSensetivitySlider" to="." method="_on_MouseSensetivitySlider_value_changed"]
